# gnu-bionic-pipe

./: Cargo.toml  LICENSE  README.md  flake.nix
bionic-end/: Cargo.toml
bionic-end/src/: main.rs
gnu-end/: Cargo.toml  build.rs
gnu-end/build-inputs/: .gitignore
gnu-end/src/: generated.rs  lib.rs
