[package]
name = "gnu-end"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "gnubionicpipe"
crate-type = ["cdylib"]

[build-dependencies.bindgen]
version = "0.66.1"
default-features = false
features = []

[build-dependencies.syn]
version = "2.0.25"
default-features = false
features = []

[build-dependencies.quote]
version = "1.0.29"
default-features = false
features = []

[build-dependencies.proc-macro2]
version = "1.0.64"
default-features = false
features = []

[build-dependencies.prettyplease]
version = "0.2.10"
default-features = false
features = []

[target.'cfg(target_arch = "x86_64")'.dependencies]
libc = "0.2.147"

[dependencies]
userland-execve = "0.1.0"
